# graphglot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-test-lint.yml  ci.yml  docs.yml  publish.yml  release.yml  security.yml  test-lint.yml
docs/: gen_ref_pages.py  getting-started.md  gql_features.md  gql_query_composition.md  gql_workflow.md  tck.md
docs/architecture/: README.md
docs/guide/: ast.md  cli.md  dialects.md  lineage.md
docs/stylesheets/: extra.css
graphglot/: __init__.py  error.py  features.py  scope.py  transformations.py
graphglot/analysis/: __init__.py  analyzer.py  models.py
graphglot/analysis/rules/: __init__.py  _registry.py  scope_rules.py  scope_validator.py  structural_rules.py
graphglot/ast/: __init__.py  base.py  cypher.py  expressions.py  functions.py  macros.py  validation.py
graphglot/cli/: __init__.py  _ast.py  _dialects.py  _features.py  _lineage.py  _parse.py  _shared.py  _tokenize.py  _transpile.py  _type.py  _validate.py
graphglot/dialect/: __init__.py  base.py  coregql.py  cypher.py  cypher_features.py  fullgql.py  gql.py  neo4j.py
graphglot/generator/: __init__.py  base.py  fragment.py  registry.py
graphglot/generator/generators/: __init__.py  clauses.py  commands.py  core.py  cypher_compat.py  expressions.py  literals.py  macros.py  patterns.py  predicates.py  statements.py  types.py
graphglot/lexer/: __init__.py  lexer.py  token.py
graphglot/lineage/: __init__.py  analyzer.py  dependency_extractor.py  exporter.py  impact.py  models.py  pattern_analyzer.py
graphglot/parser/: __init__.py  base.py  functions.py  registry.py
graphglot/parser/parsers/: __init__.py  clauses.py  commands.py  core.py  expressions.py  literals.py  macros.py  patterns.py  predicates.py  statements.py  types.py
graphglot/typing/: __init__.py  annotator.py  errors.py  scope.py  types.py
graphglot/typing/rules/: __init__.py  cast.py  functions.py  literals.py  operators.py  resolution.py  statements.py  variables.py
graphglot/utils/: deprecation.py  helper.py  trie.py
graphglot/visualization/: __init__.py  tree.py
scripts/: bnf.py  check_version_consistency.py  update-tck.sh
tests/graphglot/: parser_tests.yaml  test_cypher_extension.py  test_cypher_functions.py  test_dialect.py  test_eq.py  test_error_messages.py  test_func_transpilation.py  test_fuzz.py  test_implementation_defaults.py  test_lexer.py  test_macros.py  test_match_mode.py  test_nonstandard.py  test_order_direction.py  test_parser_yaml.py  test_path_mode.py  test_scope.py  test_transformations.py  test_transpile.py  test_unified_diagnostics.py  test_validate.py  test_version_consistency.py
tests/graphglot/analysis/: test_analyzer.py  test_feature_toggle.py  test_scope_rules.py  test_scope_validator.py  test_structural_rules.py
tests/graphglot/cli/: test_dialects.py  test_features.py  test_parse.py  test_type.py  test_version.py
tests/graphglot/dialect/: test_features.py
(+86 files in other folders)
